Cleaned up some overflow issues on small screens.

--- a/style.css
+++ b/style.css
@@ -205,20 +205,6 @@ span[contenteditable=""] {
     border-bottom: 1px solid #0006;
 }
 
-table .lineitem:hover:after {
-    display: inline-block;
-    position: absolute;
-    content: "x";
-    height: 1rem;
-    width: 1rem;
-    text-align: center;
-    padding-bottom: 2px;
-    background: #ccc;
-    border: 1px solid #0006;
-    border-radius: 50%;
-    pointer-events: auto;
-}
-
 tr {
     position: relative;
 }
@@ -356,6 +342,11 @@ dialog::backdrop {
         height: 3rem;
     }
 }
+button.smBtn {
+    border: 0px;
+    height: 16px;
+    width: 16px;
+}
 
 button.btn {
     height: 5vh;
@@ -459,6 +450,45 @@ button#helpBtn {
     transition: all 70ms linear;
     position: relative;
     top: 0px;
+}
+.rowEditWrap {
+    width: 0px;
+    position: absolute;
+    transition: all 100ms linear;
+    overflow: hidden;
+    white-space: nowrap;
+}
+.lineitem:hover .rowEditWrap {
+    width: 2rem;
+}
+.editBtn {
+    white-space: nowrap;
+    background-image: url('data:image/svg+xml,<svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="16.47px" height="16.47px"><path fill-rule="evenodd" stroke="rgb(255, 255, 255)" stroke-width="0.313px" stroke-linecap="butt" stroke-linejoin="miter" fill="rgb(0, 0, 0)" d="M10.901,0.526 C10.901,0.526 11.875,0.250 12.701,0.526 C13.527,0.802 14.756,2.293 15.101,2.929 C15.471,3.612 15.101,4.732 15.101,4.732 L14.501,5.332 L10.301,1.127 L10.901,0.526 ZM7.001,11.040 L4.901,11.040 L4.901,8.937 L2.802,8.937 L2.502,8.937 L9.701,1.728 L13.901,6.234 L7.001,13.143 L7.001,11.040 ZM1.302,11.941 L2.502,11.941 L4.601,14.344 L0.402,15.546 L0.402,14.945 L1.302,11.941 Z"/></svg>');
+    background-size: contain;
+    background-repeat: no-repeat;
+    background-position: center center;
+    height: 16px;
+    width: 16px;
+    border-radius: 50%;
+    transition: all 70ms linear;
+    position: relative;
+    top: 0px;
+}
+.rmBtn {
+    white-space: nowrap;
+    background-image: url('data:image/svg+xml,<svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="12px" height="16px"><path fill-rule="evenodd"  fill="rgb(0, 0, 0)" d="M6.045,1.547 C6.045,1.533 6.045,1.519 6.045,1.505 C5.919,1.508 5.949,1.572 5.876,1.604 C5.799,1.638 5.652,1.653 5.580,1.674 C5.207,1.783 4.824,1.827 4.466,1.929 C4.192,2.006 4.070,1.957 3.887,2.141 C3.885,2.397 4.020,2.591 3.986,2.804 C3.829,2.891 3.555,2.954 3.337,2.960 C3.263,2.837 3.257,2.669 3.210,2.508 C3.176,2.390 3.140,2.246 3.112,2.126 C3.069,1.942 3.164,1.767 3.225,1.674 C3.462,1.311 3.746,1.372 4.198,1.237 C4.713,1.083 5.260,1.019 5.791,0.869 C6.060,0.794 6.371,0.734 6.638,0.658 C6.689,0.653 6.741,0.648 6.793,0.643 C6.978,0.589 7.255,0.511 7.470,0.601 C7.666,0.683 7.827,0.868 7.893,1.081 C7.928,1.198 7.915,1.289 7.949,1.406 C7.990,1.544 8.062,1.729 8.034,1.886 C7.830,1.936 7.627,2.020 7.385,2.028 C7.359,1.986 7.346,1.987 7.343,1.915 C7.300,1.750 7.258,1.585 7.216,1.420 C7.181,1.398 7.133,1.365 7.103,1.335 C6.715,1.330 6.420,1.529 6.045,1.547 ZM10.770,1.618 C11.405,1.616 11.697,1.846 11.842,2.324 C11.948,2.676 11.988,3.074 11.686,3.242 C11.499,3.347 11.178,3.348 10.953,3.412 C10.355,3.580 9.717,3.662 9.106,3.835 C8.566,3.989 8.000,4.064 7.441,4.217 C5.955,4.622 4.386,4.859 2.900,5.276 C2.231,5.464 1.538,5.556 0.883,5.742 C0.554,5.836 0.299,5.676 0.206,5.446 C0.158,5.325 0.139,5.163 0.108,5.050 C0.023,4.741 0.152,4.450 0.263,4.287 C0.324,4.197 0.385,4.107 0.474,4.047 C0.666,3.919 0.908,3.908 1.165,3.835 C1.584,3.717 2.026,3.658 2.463,3.539 C3.824,3.168 5.268,2.953 6.623,2.564 C6.784,2.518 6.917,2.524 7.075,2.480 C7.465,2.369 7.897,2.292 8.288,2.183 C8.902,2.011 9.536,1.927 10.135,1.759 C10.297,1.714 10.655,1.695 10.770,1.618 ZM7.667,5.234 C8.598,5.234 9.529,5.234 10.459,5.234 C10.886,5.234 11.355,5.169 11.531,5.431 C11.643,5.597 11.578,5.882 11.531,6.081 C11.498,6.224 11.523,6.334 11.489,6.477 C11.447,6.651 11.451,6.850 11.404,7.042 C11.215,7.823 11.208,8.688 11.024,9.471 C10.968,9.707 10.995,9.926 10.939,10.163 C10.732,11.031 10.721,11.990 10.516,12.861 C10.456,13.113 10.461,13.375 10.403,13.609 C10.272,14.143 10.368,14.767 9.994,15.050 C9.952,15.097 9.909,15.144 9.867,15.191 C9.512,15.427 8.985,15.346 8.429,15.346 C7.437,15.346 6.445,15.346 5.453,15.346 C4.832,15.346 4.212,15.346 3.591,15.346 C3.164,15.346 2.774,15.358 2.519,15.191 C1.943,14.814 2.105,14.076 1.927,13.327 C1.763,12.636 1.751,11.870 1.589,11.180 C1.522,10.898 1.525,10.609 1.462,10.346 C1.457,10.276 1.452,10.205 1.448,10.135 C1.401,9.938 1.382,9.692 1.335,9.499 C1.330,9.428 1.325,9.358 1.321,9.287 C1.250,9.000 1.235,8.655 1.165,8.369 C1.131,8.226 1.156,8.116 1.123,7.974 C1.027,7.559 1.006,7.089 0.912,6.674 C0.860,6.448 0.985,6.240 1.095,6.166 C1.210,6.088 1.370,6.118 1.532,6.081 C1.794,6.021 2.103,6.014 2.364,5.954 C2.439,5.949 2.515,5.945 2.590,5.940 C2.883,5.870 3.214,5.886 3.521,5.813 C3.683,5.774 3.863,5.784 4.043,5.742 C4.740,5.581 5.514,5.592 6.214,5.431 C6.589,5.345 6.984,5.360 7.343,5.276 C7.453,5.250 7.585,5.287 7.667,5.234 ZM6.130,6.604 C6.090,6.630 6.042,6.613 5.989,6.632 C5.888,6.668 5.759,6.770 5.707,6.858 C5.634,6.980 5.650,7.189 5.650,7.380 C5.650,7.743 5.650,8.106 5.650,8.468 C5.650,9.692 5.650,10.916 5.650,12.140 C5.650,12.456 5.650,12.771 5.650,13.087 C5.650,13.267 5.639,13.453 5.707,13.567 C5.778,13.687 5.881,13.746 6.031,13.793 C6.085,13.809 6.195,13.843 6.285,13.821 C6.448,13.781 6.590,13.694 6.666,13.567 C6.733,13.453 6.722,13.266 6.722,13.087 C6.722,12.781 6.722,12.474 6.722,12.168 C6.722,10.789 6.722,9.409 6.722,8.030 C6.722,7.309 6.875,6.606 6.130,6.604 ZM3.055,6.632 C2.934,6.714 2.784,6.711 2.703,6.830 C2.556,7.044 2.625,7.427 2.689,7.705 C2.733,7.898 2.700,8.067 2.745,8.256 C2.811,8.534 2.791,8.838 2.858,9.132 C2.905,9.340 2.891,9.571 2.942,9.796 C3.077,10.378 3.062,11.036 3.196,11.618 C3.241,11.812 3.226,12.005 3.267,12.183 C3.378,12.659 3.278,13.462 3.619,13.694 C3.707,13.753 3.870,13.841 4.057,13.793 C4.591,13.655 4.504,13.110 4.381,12.578 C4.344,12.417 4.375,12.286 4.339,12.126 C4.291,11.917 4.306,11.690 4.254,11.462 C4.073,10.674 4.098,9.779 3.916,8.991 C3.911,8.911 3.906,8.831 3.902,8.750 C3.848,8.524 3.841,8.242 3.789,8.016 C3.640,7.370 3.884,6.620 3.055,6.632 ZM9.120,6.632 C9.080,6.660 9.028,6.653 8.979,6.674 C8.889,6.714 8.783,6.815 8.739,6.900 C8.657,7.058 8.701,7.266 8.654,7.465 C8.583,7.771 8.602,8.118 8.527,8.440 C8.367,9.132 8.394,9.907 8.231,10.601 C8.179,10.822 8.195,11.046 8.147,11.250 C8.077,11.545 8.101,11.849 8.034,12.126 C8.020,12.272 8.006,12.418 7.991,12.564 C7.959,12.675 7.972,12.840 7.935,13.002 C7.838,13.431 7.951,13.697 8.316,13.793 C8.411,13.818 8.556,13.786 8.612,13.764 C9.107,13.576 8.940,13.044 9.063,12.507 C9.101,12.249 9.138,11.990 9.176,11.731 C9.176,11.674 9.176,11.618 9.176,11.561 C9.328,10.878 9.329,9.973 9.500,9.245 C9.569,8.951 9.545,8.646 9.613,8.369 C9.623,8.261 9.632,8.153 9.641,8.044 C9.683,7.866 9.668,7.676 9.712,7.479 C9.736,7.372 9.797,7.163 9.754,7.013 C9.731,6.933 9.637,6.763 9.571,6.717 C9.473,6.640 9.288,6.631 9.120,6.632 Z"/></svg>');
+background-size: contain;
+    background-repeat: no-repeat;
+    background-position: center center;
+    height: 16px;
+    width: 16px;
+    border-radius: 50%;
+    transition: all 70ms linear;
+    position: relative;
+    top: 0px;
+}
+.rmBtn:hover, .editBtn {
+    transform: scale(1.1);
 }
 .closeIcon:hover {
     transform: scale(1.05);
